The Facebook logo and the search bar on the top left corner have been created

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -4,8 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>facebook.com</title>
+  <link rel="stylesheet" href="./header.css">
+  <link rel="stylesheet" href="./general.css">
 </head>
 <body>
-  
+  <div class="header">
+    <div class="left-section">
+      <div class="logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Facebook_Logo_2023.png/900px-Facebook_Logo_2023.png" alt="Facebook logo">
+      </div>
+      <div class="search-bar">
+        <img src="./icons/Search icon.png" alt="Search icon">
+        <input type="text" placeholder="Search Facebook">
+      </div>
+    </div>
+
+    <div class="middle-section">
+      <div><img src="./icons/Home.png" alt="Facebook Home"></div>
+      <div><img src="./icons/Video.png" alt="Facebook Videos"></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
 </body>
 </html>
