After the left-section the middle and right sections have been created respectively

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -20,11 +20,18 @@
     </div>
 
     <div class="middle-section">
-      <div><img src="./icons/Home.png" alt="Facebook Home"></div>
-      <div><img src="./icons/Video.png" alt="Facebook Videos"></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div><img src="./icons/Home.png" alt="Home icon"></div>
+      <div><img src="./icons/Video.png" alt="Videos icon"></div>
+      <div><img src="./icons/marketplace.png" alt="Market icon"></div>
+      <div><img src="./icons/groups.png" alt="Groups icon"></div>
+      <div><img src="./icons/gaming.png" alt="Gaming icon"></div>
+    </div>
+
+    <div class="right-section">
+      <div><img src="./icons/menu.png" alt="Menu icon"></div>
+      <div><img src="./icons/messenger.png" alt="Messenger icon"></div>
+      <div><img src="./icons/notifications.png" alt="Notifications icon"></div>
+      <div><img src="./icons/profile.jpg" class="profile-picture" alt="Account icon"></div>
     </div>
   </div>
 </body>
