--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -19,19 +19,39 @@
       </div>
     </div>
 
+<!--Middle section starts from here-->
     <div class="middle-section">
-      <div><img src="./icons/Home.png" alt="Home icon"></div>
-      <div><img src="./icons/Video.png" alt="Videos icon"></div>
-      <div><img src="./icons/marketplace.png" alt="Market icon"></div>
-      <div><img src="./icons/groups.png" alt="Groups icon"></div>
-      <div><img src="./icons/gaming.png" alt="Gaming icon"></div>
+      <div class="container">
+        <img src="./icons/Home.png" alt="Home icon">
+        <div class="tooltip">Home</div>
+      </div>
+
+      <div class="container">
+        <img src="./icons/Video.png" alt="Videos icon">
+        <div class="tooltip">Video</div>
+      </div>
+      <div class="container">
+        <img src="./icons/marketplace.png" alt="Market icon">
+        <div class="tooltip">Marketplace</div>
+      </div>
+      <div class="container">
+        <img src="./icons/groups.png" alt="Groups icon">
+        <div class="tooltip">Groups</div>
+      </div>
+      <div class="container">
+        <img src="./icons/gaming.png" alt="Gaming icon">
+        <div class="tooltip">Gaming</div>
+      </div>
     </div>
 
+
+
+<!--Middle section starts from here-->
     <div class="right-section">
       <div><img src="./icons/menu.png" alt="Menu icon"></div>
       <div><img src="./icons/messenger.png" alt="Messenger icon"></div>
       <div><img src="./icons/notifications.png" alt="Notifications icon"></div>
-      <div><img src="./icons/profile.jpg" class="profile-picture" alt="Account icon"></div>
+      <div class="account-icon"><img src="./icons/profile.jpg" class="profile-picture" alt="Account icon"></div>
     </div>
   </div>
 </body>
