The tooltips are added to both middle-section and right-section.

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -21,24 +21,24 @@
 
 <!--Middle section starts from here-->
     <div class="middle-section">
-      <div class="container">
+      <div class="middle-section-container">
         <img src="./icons/Home.png" alt="Home icon">
         <div class="tooltip">Home</div>
       </div>
 
-      <div class="container">
+      <div class="middle-section-container">
         <img src="./icons/Video.png" alt="Videos icon">
         <div class="tooltip">Video</div>
       </div>
-      <div class="container">
+      <div class="middle-section-container">
         <img src="./icons/marketplace.png" alt="Market icon">
         <div class="tooltip">Marketplace</div>
       </div>
-      <div class="container">
+      <div class="middle-section-container">
         <img src="./icons/groups.png" alt="Groups icon">
         <div class="tooltip">Groups</div>
       </div>
-      <div class="container">
+      <div class="middle-section-container">
         <img src="./icons/gaming.png" alt="Gaming icon">
         <div class="tooltip">Gaming</div>
       </div>
@@ -46,12 +46,26 @@
 
 
 
-<!--Middle section starts from here-->
+<!--Right section starts from here-->
     <div class="right-section">
-      <div><img src="./icons/menu.png" alt="Menu icon"></div>
-      <div><img src="./icons/messenger.png" alt="Messenger icon"></div>
-      <div><img src="./icons/notifications.png" alt="Notifications icon"></div>
-      <div class="account-icon"><img src="./icons/profile.jpg" class="profile-picture" alt="Account icon"></div>
+      <div class="right-section-container">
+        <img src="./icons/menu.png" alt="Menu icon">
+        <div class="tooltip">Menu</div>
+      </div>
+      <div class="right-section-container">
+        <img src="./icons/messenger.png" alt="Messenger icon">
+        <div class="tooltip">Messenger</div>
+        <div class="message-count">4</div>
+      </div>
+      <div class="right-section-container">
+        <img src="./icons/notifications.png" alt="Notifications icon">
+        <div class="tooltip">Notifications</div>
+        <div class="notification-count">5</div>
+      </div>
+      <div class="account-icon right-section-container">
+        <img src="./icons/profile.jpg" class="profile-picture" alt="Account icon">
+        <div class="tooltip">Account</div>
+      </div>
     </div>
   </div>
 </body>
