The right-sidebar has been created and I am currently working on it

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -80,6 +80,8 @@
   <!--Sidebar starts from here-->
   <!--Left-sidebar-->
   <div class="left-sidebar">
+
+    <!-- First part of the left-sidebar -->
     <div class="first-part">
       <div class="container">
         <div class="image">
@@ -206,6 +208,202 @@
       <span>Meta © 2024</span>
     </div>
 
+  </div>
+
+  <!-- Right-sidebar  -->
+  <div class="right-sidebar">
+    <div class="first-part">
+      <div class="sponsor">Sponsored</div>
+      <div class="advertise">
+        <div class="sponsor-image"><img src="./images/scaler.webp" alt="Scaler advertize"></div>
+        <div class="secondary-container">
+          <div class="heading"><p>Learn must-know DevOps tools</p></div>
+          <div><a href="https://www.scaler.com/" target="_blank">scaler.com</a></div>
+        </div>
+        <div class="menu"><img src="./images/option.png" alt="option"></div>
+      </div>
+
+      <div class="advertise">
+        <div class="sponsor-image"><img src="./images/codingninjas.jpeg" alt="Codingninjas advertise"></div>
+        <div class="secondary-container">
+          <div class="heading"><p>Book Live Webinar For Free!</p></div>
+          <div><a href="https://www.codingninjas.com/" target="_blank">codingninjas.com</a></div>
+        </div>
+        <div class="menu"><img src="./images/option.png" alt="option"></div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="second-part">
+      <div class="primary-container">
+        <div class="contacts">Contacts</div>
+        <div class="search-option">
+          <div><img src="./icons/Search icon.png" alt="Search icon"></div>
+          <div><img src="./images/option.png" alt="option icon"></div>
+        </div>
+      </div>
+
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bibhuti Choudhury</div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
