The right-sidebar is almost complete and some minor additions is to be done.

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -9,7 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./header.css">
   <link rel="stylesheet" href="./general.css">
-  <link rel="stylesheet" href="./sidebar.css">
+  <link rel="stylesheet" href="./left-sidebar.css">
+  <link rel="stylesheet" href="./right-sidebar.css">
 </head>
 <body>
   <div class="header">
@@ -212,6 +213,8 @@
 
   <!-- Right-sidebar  -->
   <div class="right-sidebar">
+
+    <!-- First-part  -->
     <div class="first-part">
       <div class="sponsor">Sponsored</div>
       <div class="advertise">
@@ -234,6 +237,22 @@
     </div>
 
     <hr>
+
+    <div class="birthday-container">
+      <div class="birthday">Birthdays</div>
+      <div class="wishes">
+        <div class="gift-icon"><img src="./icons/gift.png" alt="Giift icon"></div>
+        <div class="person"><p><span>Sonali Samir Samal</span>'s birthday is today.</p></div>
+      </div>
+
+      <div class="wishes">
+        <div class="gift-icon"><img src="./icons/gift.png" alt="Giift icon"></div>
+        <div class="person"><p><span>Satya Sibani Nayak</span>'s birthday is today.</p></div>
+      </div>
+    </div>
+
+    <hr>
+    <!-- Second-part  -->
     <div class="second-part">
       <div class="primary-container">
         <div class="contacts">Contacts</div>
@@ -246,10 +265,140 @@
 
       <div class="container">
         <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+          <img class="profile-picture" src="./images/Satya Sibani Nayak.jpg" alt="Profile picture">
           <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
         </div>
-        <div>Bibhuti Choudhury</div>
+        <div>Satya Sibani Nayak</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Sushree Suhana.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Sushree Suhana</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Biswajeet Nayak.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Biswajeet Nayak</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Abhishek Satpathy.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Abhishek Satpathy</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Abinash Kumar Gadnayak.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Abinash Kumar Gadnayak</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Arya Prusty.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Arya Prusty</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Bhabesh Chandra Sahoo.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Bhabesh Chandra Sahoo</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Himanshu Shekhar.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Himanshu Shekhar</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Dibya Ranjan.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Dibya Ranjan</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Holika Kharsel.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Holika Kharsel</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Jangyaprakash Biswal.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Jangyaprakash Biswal</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Mousumi Panda.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Mousumi Panda</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Kalicharan Khandual.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Kalicharan Khandual</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Prabha Xess.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Prabha Xess</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Rohan Garg.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Rohan Garg</div>
+      </div>
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Pratik Kumar Behera.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Pratik Kumar Behera</div>
+      </div>
+
+      
+
+      <div class="container">
+        <div class="active-now">
+          <img class="profile-picture" src="./images/Sanjib Sonu.jpg" alt="Profile picture">
+          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        </div>
+        <div>Sanjib Sonu</div>
       </div>
 
       <div class="container">
@@ -260,148 +409,39 @@
         <div>Bibhuti Choudhury</div>
       </div>
 
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
+    </div>
 
+    <hr>
+    <!-- Third-part  -->
+    <div class="third-part">
+      <div class="group-conversation">Group conversations</div>
       <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+        <div class="secondary-container">
+          <img class="gourab" src="./images/Gourab Kumar Sahoo.jpg" alt="Profile picture">
+          <img class="biswanath" src="./images/Biswanath Samanta.jpg" alt="Profile picture">
           <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
         </div>
-        <div>Bibhuti Choudhury</div>
+        <div class="group-name">Gourab Kumar, Biswanath and 18 others</div>
       </div>
-
       <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+        <div class="secondary-container">
+          <img src="./images/Pratik Kumar Behera.jpg" alt="Profile picture">
           <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
         </div>
-        <div>Bibhuti Choudhury</div>
+        <div class="group-name">Jai Jagannath</div>
       </div>
-
       <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
+        <div class="secondary-container">
+          <img src="./images/mathematics.jpeg" alt="Profile picture">
           <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
         </div>
-        <div>Bibhuti Choudhury</div>
+        <div class="group-name">Braja Sir 2014</div>
       </div>
-
       <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
+        <div class="secondary-container plus">
+          <img class="add" src="./icons/plus.png" alt="Create-new icon ">
         </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
-      </div>
-
-      <div class="container">
-        <div class="active-now">
-          <img class="profile-picture" src="./images/profilePic1.jpg" alt="Profile picture">
-          <div class="green-dot"><img src="./icons/active now.png" alt="Active now"></div>
-        </div>
-        <div>Bibhuti Choudhury</div>
+        <div class="group-name">Create New Group</div>
       </div>
     </div>
   </div>
