The changes which were to be done to the right-sidebar is finally completed.

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -257,8 +257,14 @@
       <div class="primary-container">
         <div class="contacts">Contacts</div>
         <div class="search-option">
-          <div><img src="./icons/Search icon.png" alt="Search icon"></div>
-          <div><img src="./images/option.png" alt="option icon"></div>
+          <div class="search">
+            <img src="./icons/Search icon.png" alt="Search icon">
+            <div class="tooltip">Search for a name or group</div>
+          </div>
+          <div class="option">
+            <img src="./images/option.png" alt="option icon">
+            <div class="tooltip">Options</div>
+          </div>
         </div>
       </div>
 
