References(links) have been added to the lef-sidebar more-links.

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -200,11 +200,11 @@
     
 
     <div class="more-links">
-      <a href="">Privacy</a>      <span>&middot;</span>
-      <a href="">Terms</a>        <span>&middot;</span>
-      <a href="">Advertising</a>  <span>&middot;</span>
-      <a href="">Ad choices</a>   <span>&middot;</span>
-      <a href="">Cookies</a>      <span>&middot;</span> <br>
+      <a href="https://www.facebook.com/privacy/policy/?entry_point=comet_dropdown">Privacy</a>      <span>&middot;</span>
+      <a href="https://www.facebook.com/policies_center/">Terms</a>        <span>&middot;</span>
+      <a href="https://www.facebook.com/business/">Advertising</a>  <span>&middot;</span>
+      <a href="https://www.facebook.com/help/568137493302217">Ad choices</a>   <span>&middot;</span>
+      <a href="https://www.facebook.com/privacy/policies/cookies/?entry_point=cookie_policy_redirect&entry=0">Cookies</a>      <span>&middot;</span> <br>
       <a class="except" href="">More</a>         <span>&middot;</span>
       <span>Meta © 2024</span>
     </div>
