The new-message icon at the bottom right corner of the web-page has been created

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./right-sidebar.css">
 </head>
 <body>
+  <!-- Header  -->
   <div class="header">
 
     <!--Left section starts from here-->
@@ -449,6 +450,13 @@
         </div>
         <div class="group-name">Create New Group</div>
       </div>
+    </div>
+  </div>
+
+  <div class="new-message">
+    <div class="image-text">
+      <img class="image" src="./icons/write.png" alt="New-message icon">
+      <div class="text">New Message</div>
     </div>
   </div>
 </body>
