The new Friend-request notification in the right-sidebar has been created

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -253,6 +253,30 @@
     </div>
 
     <hr>
+
+    <div class="request-container">
+      <div class="primary-container">
+        <div class="request">Friend requests</div>
+        <div class="see-all"><a href="">See All</a></div>
+      </div>
+      <div class="secondary-container">
+        <div class="profile-picture">
+          <img class="image" src="./images/user.png" alt="Profile Picture">
+        </div>
+        <div class="about">
+          <div class="name">
+            <div class="entity">Aaditya Vers Rourkela</div>
+            <div class="days">2d</div>
+          </div>
+          <div class="buttons">
+            <button class="confirm">Confirm</button>
+            <button class="delete">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
     <!-- Second-part  -->
     <div class="second-part">
       <div class="primary-container">
