The Upload section has been created and the UI design is partially finished.

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./general.css">
   <link rel="stylesheet" href="./left-sidebar.css">
   <link rel="stylesheet" href="./right-sidebar.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <!-- Header  -->
@@ -482,6 +483,36 @@
       <img class="image" src="./icons/write.png" alt="New-message icon">
       <div class="text">New Message</div>
     </div>
+  </div>
+
+  <div id="main">
+   <div class="section">
+    <div id="upload">
+      <div class="first-part">
+        <div>
+          <img class="profile-picture" src="./icons/profile.jpg" alt="Profile picture.">
+        </div>
+        <div>
+          <input type="text" placeholder="What's on your mind, Sumit?">
+        </div>
+      </div>
+      <hr>
+      <div class="second-part">
+        <div id="video">
+          <img class="upload-icon" src="https://static.xx.fbcdn.net/rsrc.php/v3/yF/r/v1iF2605Cb5.png" alt="Live video.">
+          <p>Live video</p>
+        </div>
+        <div id="photo">
+          <img class="upload-icon" src="https://static.xx.fbcdn.net/rsrc.php/v3/yC/r/a6OjkIIE-R0.png" alt="Upload a photo/video.">
+          <p>Photo/video</p>
+        </div>
+        <div id="feelings">
+          <img class="upload-icon" src="https://static.xx.fbcdn.net/rsrc.php/v3/yk/r/yMDS19UDsWe.png" alt="How do you feel?">
+          <p>Feeling/activity</p>
+        </div>
+      </div>
+    </div>
+   </div>
   </div>
 </body>
 </html>
