The UI design of the Upload section is complete.

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -492,7 +492,7 @@
         <div>
           <img class="profile-picture" src="./icons/profile.jpg" alt="Profile picture.">
         </div>
-        <div>
+        <div class="input-box">
           <input type="text" placeholder="What's on your mind, Sumit?">
         </div>
       </div>
