The Story-section has been created and I am working on it.

--- a/Facebook-clone/index.html
+++ b/Facebook-clone/index.html
@@ -486,6 +486,24 @@
   </div>
 
   <div id="main">
+    <div class="section" id="story-section">
+      <div class="container">
+        <div><img class="profile-picture" src="./icons/profile.jpg" alt="My story"></div>
+        <div class="text"><p>Create story</p></div>
+        <div class="white-circle"></div>
+        <div class="create-story"><svg viewBox="0 0 20 20" width="20" height="20" fill="currentColor" class="x19dipnz x1lliihq x1k90msu x2h7rmj x1qfuztq" style="--color:var(--always-white)"><g fill-rule="evenodd" transform="translate(-446 -350)"><g fill-rule="nonzero"><path d="M95 201.5h13a1 1 0 1 0 0-2H95a1 1 0 1 0 0 2z" transform="translate(354.5 159.5)"></path><path d="M102.5 207v-13a1 1 0 1 0-2 0v13a1 1 0 1 0 2 0z" transform="translate(354.5 159.5)"></path></g></g></svg></div>
+      </div>
+      <div class="container">
+
+      </div>
+      <div class="container">
+
+      </div>
+      <div class="container">
+
+      </div>
+    </div>
+
    <div class="section">
     <div id="upload">
       <div class="first-part">
